# ARAM-Auto-Queue

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: pyinstaller.yml  pylint.yml
sciter/css/: about.css  main.css  menu.css
sciter/html/: about.html  main.html
sciter/js/: about.js  adjust_window.js  config.js  constants.js  lcu_api.js  main.js  proc_utils.js  session.js
src/: AutoQr.spec  config.py  constants.py  fetch.rs  lcu_api.py  main.py  main.rs  proc_utils.py  proc_utils.rs
